Add comments, delete trash code and improvements

--- a/src/app/home/bienvenida/bienvenida.component.html
+++ b/src/app/home/bienvenida/bienvenida.component.html
@@ -3,8 +3,10 @@
         Bienvenido 
     </h1>
     <p>
-        Este es un projecto Angular que lleva a cabo una recopilación de datos en caché, simulando que son de una API de Rick y Morty <br>
-        En esta versión del proyecto practicamos las llamadas a componentes hijos y el enruttamiento de las mismas
+        Este es un projecto Angular que lleva a cabo una recopilación de datos de una API de Rick y Morty <br>
+        En esta versión del proyecto practicamos las llamadas de datos desde una API, en el ejercicio <br>
+        realizado muestra 5 tarjetas aleatorias de la API en el que si seleccionamos una podremos ver más <br>
+        detalles del personaje.
     </p>
     <div>
         <a class="btn btn-primary mx-1" href="./register" role="button">Registrarse</a>
