--- a/src/app/home/characters/characters.component.html
+++ b/src/app/home/characters/characters.component.html
@@ -1,11 +1,13 @@
 
 <div class="d-flex justify-content-center w-100 h-100 p-5 row">
     <div class="col-sm-3 col-md-2 col-lg-2 m-1 mx-3" *ngFor="let item of characters">
-        <div class="d-flex  m-2 card text-center" ><!-- w-100 h-50 -->
+        <div class="d-flex  m-2 card text-center" >
+            <!-- Se recoge la URL de la imagen desde el que indica el propio Item -->
             <img  src="{{item.image}}" alt="">
             <p class="m-0 mt-1">{{item.name}}</p>
+            <!-- Con el siguiente boton nos llevara a la ruta detalles incluido la ID del item como argumento por URL -->
             <a href="./home/characters/detalles/{{item.id}}"><button class="btn btn-warning m-3" (click)=" getItemSelect(item)">See More</button></a>
         </div>
     </div>
 </div>
-<router-outlet ></router-outlet><!-- [item]="item" -->
+<router-outlet ></router-outlet>
