--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,7 @@
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav  justify-content-end mb-2 mb-lg-0 ">
+                    <!-- Los <li> nos redirigen a diferentes partes del projecto deginidas en el routing module -->
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="./home">Home</a>
                     </li>
@@ -25,9 +26,3 @@
 </nav>
 
 <router-outlet></router-outlet>
-<!-- (activate)="cambioHome($event)" -->
-<!-- <div class="container" *ngIf="mostrarBienvenida">
-    <h1>
-        Bienvenido 
-    </h1>
-</div> -->
