Correct routing update, visual improvements

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,5 +1,17 @@
+<app-navbar></app-navbar>
 <div class="container mt-5 text-center">
     <h5><strong>Programador:</strong> Gerard Fernández Tejada</h5>
-    <h5><strong>Versión:</strong> 1</h5>
+    <h5><strong>Versión:</strong> 1.2</h5>
     <h5><strong>Fecha desarrollo:</strong>10/07/2023</h5>
+    <h6>Mejoras</h6>
+    <div class="d-flex justify-content-center">
+        
+        <p class="text-start">v1.2: 
+            <br>- Se ha corregido el tipo de enrutado de Angular 
+            <br>- Los enlaces utilizan RouterLink y no href
+            <br>- Los caracteres no se resetean cada vez que se cambia de pestaña
+            <br>- Se ha mejorado el aspecto visual de detalle de personaje ahora se <br>
+            muestra en una pestaña aparte y se ha aumentado la presencia visual del mismo
+        </p>
+    </div>
 </div>
