--- a/src/app/home/characters/detalle/detalle.component.html
+++ b/src/app/home/characters/detalle/detalle.component.html
@@ -1,5 +1,6 @@
+<app-navbar></app-navbar>
 <div class="d-flex justify-content-center w-100 h-100 p-5 row">
-    <div class="col-sm-6 col-md-4 col-lg-2 m-1 mx-3">
+    <div class="col-sm-7 col-md-6 col-lg-4 m-1 mx-3">
         <div class="d-flex  m-2 card text-center" ><!-- w-100 h-50 -->
             <img  src="{{item.image}}" alt="">
             <p class="m-0 mt-1">ID: {{item.id}}</p>
